--- a/README.org
+++ b/README.org
@@ -98,9 +98,21 @@ they allows program to maintain mostly stateless and reproducable always.
   print(Rho([3, 3],Iota(5)))
 #+end_src
 
+#+RESULTS:
+: ┌3,3──┐
+: │1 2 3│
+: │4 5 1│
+: │2 3 4│
+: └─────┘
+: 
+
 ** Average
 #+begin_src python :exports both :results output
   from APL import *
   a = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
   print(Divi(Reduce(Plus, a), len(a)))
 #+end_src
+
+#+RESULTS:
+: 5.50
+: 
