--- a/README.org
+++ b/README.org
@@ -115,4 +115,34 @@ they allows program to maintain mostly stateless and reproducable always.
 
 #+RESULTS:
 : 5.50
+
+** Rotate
+Rotates first axis with -1 direction and second axis with 2 direction
+#+begin_src python :exports both :results output
+  from APL import *
+  a = Rho([3, 3], [1, 2, 3, 4, 5, 6, 7, 8, 9, 10])
+  print(Rotate([-1, 2], a))
+#+end_src
+
+#+RESULTS:
+: ┌3,3──┐
+: │9 7 8│
+: │3 1 2│
+: │6 4 5│
+: └─────┘
 : 
+
+** Occurence of Characters
+#+begin_src python exports: both :results output
+  from APL import *
+  a = Plus(96, Iota(26)).mapAll(chr) # all alphabet characters
+  b = list("bananafish") # given string
+  print(a)
+  print(Reduce(Plus, JotDot(Eq)(a, b)))
+#+end_src
+
+#+RESULTS:
+: a b c d e f g h i j k l m n o p q r s t u v w x y z
+: 3 1 0 0 0 1 0 1 1 0 0 0 0 2 0 0 0 0 1 0 0 0 0 0 0 0
+
+Number of occurences of each alphabet characters!
