--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 
 #+Title: PyAPL
-(Partial) Implmentation of [APL](https://aplwiki.com/wiki/Main_Page) on top of Python--Python APL EDSL
+(Partial) Implmentation of [[https://aplwiki.com/wiki/Main_Page][APL]] on top of Python--Python APL EDSL
 
 School Project, Dec 2021.
 
