--- a/README.org
+++ b/README.org
@@ -144,3 +144,35 @@ Rotates first axis with -1 direction and second axis with 2 direction
 #+RESULTS:
 : a b c d e f g h i j k l m n o p q r s t u v w x y z
 : 3 1 0 0 0 1 0 1 1 0 0 0 0 2 0 0 0 0 1 0 0 0 0 0 0 0
+
+** Few more
+#+begin_src python :exports both :results output
+  from APL import *
+  print(Rho([3, 4], [Rho([2, 3], Iota(4)), 5, Rho([4, 2], Iota(5))]))
+#+end_src
+
+#+RESULTS:
+#+begin_example
+┌3,4────┬───────┬───────┬───────┐
+│┌2,3──┐│5      │┌4,2┐  │┌2,3──┐│
+││1 2 3││       ││1 2│  ││1 2 3││
+││4 1 2││       ││3 4│  ││4 1 2││
+│└─────┘│       ││5 1│  │└─────┘│
+│       │       ││2 3│  │       │
+│       │       │└───┘  │       │
+├───────┼───────┼───────┼───────┤
+│5      │┌4,2┐  │┌2,3──┐│5      │
+│       ││1 2│  ││1 2 3││       │
+│       ││3 4│  ││4 1 2││       │
+│       ││5 1│  │└─────┘│       │
+│       ││2 3│  │       │       │
+│       │└───┘  │       │       │
+├───────┼───────┼───────┼───────┤
+│┌4,2┐  │┌2,3──┐│5      │┌4,2┐  │
+││1 2│  ││1 2 3││       ││1 2│  │
+││3 4│  ││4 1 2││       ││3 4│  │
+││5 1│  │└─────┘│       ││5 1│  │
+││2 3│  │       │       ││2 3│  │
+│└───┘  │       │       │└───┘  │
+└───────┴───────┴───────┴───────┘
+#+end_example
