--- a/README.org
+++ b/README.org
@@ -286,3 +286,89 @@ Rotates first axis with -1 direction and second axis with 2 direction
 └─────┘
 #+end_example
 
+** Game of Life partial
+#+begin_src python :exports both :results output
+  from APL import *
+
+  flat = lambda a: a[0] + flat(a[1:]) if len(a) > 1 else a[0]
+  board = [
+    [0, 0, 0, 0, 0],
+    [0, 0, 1, 0, 0],
+    [0, 0, 0, 1, 0],
+    [0, 1, 1, 1, 0],
+    [0, 0, 0, 0, 0],
+  ]
+  board = Rho([len(board), len(board[0])], flat(board)) 
+
+  print("All rotations to adjacent cells:")
+  life = (JotDot(Rotate)([-1,0,1], JotDot(RotateFirst)([-1, 0, 1], [board])))
+  print(life) 
+
+  print("Sum of all alive adjacent cells:")
+  life = Reduce(Plus, life.arr)
+  print(life.singleton()) 
+
+  print("Cells with 3 or 4 adjacent cells:")
+  life = Eq([3, 4], life)
+  print(life)
+
+  print("New generation!")
+  print(dot(Or, And)([1, board], life).singleton())
+#+end_src
+
+#+RESULTS:
+#+begin_example
+All rotations to adjacent cells:
+┌3,3────────┬───────────┬───────────┐
+│┌5,5──────┐│┌5,5──────┐│┌5,5──────┐│
+││0 0 0 0 0│││0 0 0 0 0│││0 0 0 0 0││
+││0 0 0 0 0│││0 0 0 0 0│││0 0 0 0 0││
+││0 0 0 1 0│││0 0 1 0 0│││0 1 0 0 0││
+││0 0 0 0 1│││0 0 0 1 0│││0 0 1 0 0││
+││0 0 1 1 1│││0 1 1 1 0│││1 1 1 0 0││
+│└─────────┘│└─────────┘│└─────────┘│
+├───────────┼───────────┼───────────┤
+│┌5,5──────┐│┌5,5──────┐│┌5,5──────┐│
+││0 0 0 0 0│││0 0 0 0 0│││0 0 0 0 0││
+││0 0 0 1 0│││0 0 1 0 0│││0 1 0 0 0││
+││0 0 0 0 1│││0 0 0 1 0│││0 0 1 0 0││
+││0 0 1 1 1│││0 1 1 1 0│││1 1 1 0 0││
+││0 0 0 0 0│││0 0 0 0 0│││0 0 0 0 0││
+│└─────────┘│└─────────┘│└─────────┘│
+├───────────┼───────────┼───────────┤
+│┌5,5──────┐│┌5,5──────┐│┌5,5──────┐│
+││0 0 0 1 0│││0 0 1 0 0│││0 1 0 0 0││
+││0 0 0 0 1│││0 0 0 1 0│││0 0 1 0 0││
+││0 0 1 1 1│││0 1 1 1 0│││1 1 1 0 0││
+││0 0 0 0 0│││0 0 0 0 0│││0 0 0 0 0││
+││0 0 0 0 0│││0 0 0 0 0│││0 0 0 0 0││
+│└─────────┘│└─────────┘│└─────────┘│
+└───────────┴───────────┴───────────┘
+Sum of all alive adjacent cells:
+┌5,5──────┐
+│0 1 1 1 0│
+│0 1 2 2 1│
+│1 3 5 4 2│
+│1 2 4 3 2│
+│1 2 3 2 1│
+└─────────┘
+Cells with 3 or 4 adjacent cells:
+┌2──────────┬───────────┐
+│┌5,5──────┐│┌5,5──────┐│
+││0 0 0 0 0│││0 0 0 0 0││
+││0 0 0 0 0│││0 0 0 0 0││
+││0 1 0 0 0│││0 0 0 1 0││
+││0 0 0 1 0│││0 0 1 0 0││
+││0 0 1 0 0│││0 0 0 0 0││
+│└─────────┘│└─────────┘│
+└───────────┴───────────┘
+New generation!
+┌5,5──────┐
+│0 0 0 0 0│
+│0 0 0 0 0│
+│0 1 0 1 0│
+│0 0 1 1 0│
+│0 0 1 0 0│
+└─────────┘
+#+end_example
+
